--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Naman, I am a web <span class="typing-2"></span></div>
-                    <p>Hey their, I  born and brought up is Bharatpur itself currently i am persuing b.tech from Government Engineering College Bharatpur except all this tech things I am a professtional bathroom singer.</p>
+                    <p>Hey their, I  born and brought up in Bharatpur itself currently i am persuing b.tech from Government Engineering College Bharatpur except all this tech things I am a professtional bathroom singer.</p>
                 </div>
             </div>
         </div>
@@ -97,7 +97,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I am a beigner in this work but i know how to get work done and I am getting better day by day.</p>
+                    <p>I am a beginner in this work but i know how to get work done and I am getting better day by day.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
