--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Naman, I am a web <span class="typing-2"></span></div>
-                    <p>Hey their, I  born and brought up in Bharatpur itself currently i am persuing b.tech from Government Engineering College Bharatpur except all this tech things I am a professtional bathroom singer.</p>
+                    <p>Hey there, I  was born and brought up in Bharatpur itself currently I am pursuing a b.tech from Government Engineering College Bharatpur apart from all these tech things I am a professional bathroom singer.</p>
                 </div>
             </div>
         </div>
@@ -76,14 +76,14 @@
                     <div class="box">
                         <i class="fas fa-chart-line"></i>
                         <div class="text">Graphic Design</div>
-                        <p>Graphic design is not just about creativity it's more like making perception of getting things you want.</p>
+                        <p>Graphic design is not just about creativity it's more like making the perception of getting things you want.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-code"></i>
                         <div class="text">Web Developer</div>
-                        <p>I like to code things from scratch, and enjoy bringing ideas to life in the browser.</p>
+                        <p>I like to code things from scratch and enjoy bringing ideas to life in the browser.</p>
                     </div>
                 </div>
                </div>
@@ -97,7 +97,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">My creative skills & experiences.</div>
-                    <p>I am a beginner in this work but i know how to get work done and I am getting better day by day.</p>
+                    <p>I am a beginner in this work but I know how to get work done and I am getting better day by day.</p>
                 </div>
                 <div class="column right">
                     <div class="bars">
@@ -143,7 +143,7 @@
             <div class="contact-content">
                 <div class="column left">
                     <div class="text">Get in Touch</div>
-                    <p>Let's just make a community for coders to help each other.</p>
+                    <p>Let's make a community for coders to help each other.</p>
                     <div class="icons">
                         <div class="row">
                             <i class="fas fa-user"></i>
